--- a/index.html
+++ b/index.html
@@ -1,177 +1,175 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <html lang="en">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;500&display=swap" rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-        <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@300;400;500&display=swap" rel="stylesheet" />
 
-        <title>Currículo DIW</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
 
-    </head>
-    <body>
-        <header class="my-info">
-            <div class="picture">
-                <img alt="Imagem de perfil"
-                     class="profile-img"
-                     src="https://media.licdn.com/dms/image/D4D03AQFOTExlMGveXw/profile-displayphoto-shrink_200_200/0/1665431794485?e=1682553600&v=beta&t=27jbTu8_pG9G7N4HhC08q7CNL4m2GyPQPdEh4auijak">
-            </div>
+    <title>Currículo DIW</title>
+  </head>
 
-            <div class="my-social-media">
-                <img src="assets/mail.svg" alt="Email icon">
-                    <a class="email" href="mailto:salibagui19@gmail.com">
-                        EMAIL
-                    </a>
+  <body>
+  <header class="my-info">
+    <div class="picture">
+      <img alt="Imagem de perfil" class="profile-img"
+           src="https://media.licdn.com/dms/image/D4D03AQFOTExlMGveXw/profile-displayphoto-shrink_200_200/0/1665431794485?e=1682553600&v=beta&t=27jbTu8_pG9G7N4HhC08q7CNL4m2GyPQPdEh4auijak">
+    </div>
 
-                <img src="./assets/logo-linkedin.svg" alt="Linkedin icon">
-                    <a class="linkedin" href="https://www.linkedin.com/in/salibagui">
-                        LINKEDIN
-                    </a>
+    <div class="my-social-media">
+      <img src="assets/mail.svg" alt="Email icon">
+      <a class="email" href="mailto:salibagui19@gmail.com">
+        EMAIL
+      </a>
 
-                <img src="./assets/logo-github.svg" alt="Github icon">
-                    <a  class="github" href="https://www.github.com/guisaliba">
-                        GITHUB
-                    </a>
+      <img src="./assets/logo-linkedin.svg" alt="Linkedin icon">
+      <a class="linkedin" href="https://www.linkedin.com/in/salibagui">
+        LINKEDIN
+      </a>
 
-                <img src="./assets/logo-instagram.svg" alt="Instagram icon">
-                <a class="instagram" href="https://www.instagram.com/httpsaliba">
-                        INSTAGRAM
-                    </a>
-            </div>
-        </header>
-        <footer class="name-and-role">
-            <h2 class="name">
-                GUILHERME SALIBA
-            </h2>
-        </footer>
+      <img src="./assets/logo-github.svg" alt="Github icon">
+      <a class="github" href="https://www.github.com/guisaliba">
+        GITHUB
+      </a>
 
-        <section class="aboutme-skills">
-            <div class="about-me">
-                <h3>
-                    SOBRE MIM
-                </h3>
-                <p>
-                    Sou estudante de Sistemas de Informação na Pontifícia Universidade Católica de Minas Gerais e
-                    apaixonado por criar coisas úteis para todos, aprender coisas novas e compartilhar conhecimentos.
-                    Profundamente interessado em algoritmos, cibersegurança, design, ciência e humanos. Adoro resolver
-                    problemas e estou sempre procurando por desafios para aprender algo novo.
+      <img src="./assets/logo-instagram.svg" alt="Instagram icon">
+      <a class="instagram" href="https://www.instagram.com/httpsaliba">
+        INSTAGRAM
+      </a>
+    </div>
+  </header>
+  <footer class="name-and-role">
+    <h2 class="name">
+      GUILHERME SALIBA
+    </h2>
+  </footer>
 
-                    Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet. Lorem ipsum dolor
-                    sit amet. Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet.Lorem ipsum dolor sit amet. Lorem
-                    ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor.
-                    Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum.
-                </p>
-            </div>
-            <div class="skills">
-                <h3>
-                    HABILIDADES
-                </h3>
-                <ul>
-                    <li>
-                        <strong>Front-end:</strong> Conhecimentos amplos em JavaScript e React. Conhecimentos
-                        intermediários em TypeScript e React Native (desenvolvimento mobile) e bom conhecimento em
-                        diversos frameworks CSS como styled-components e Tailwind.
-                        Orientado sempre por boas práticas de UI e UX.
-                    </li>
-                    <li>
-                        <strong>Back-end:</strong> Conhecimentos amplos em Node.js e frameworks como Express, NestJS e
-                        Fastify, em banco de dados SQL (MySQL e Postgres), e MongoDB. Bom conhecimento em
-                        conteinerização com Docker (também com Linux em WSL2), Kubernetes e ORMs como Prisma e TypeORM.
-                    </li>
-                    <li>
-                        <strong>Serverless:</strong>
-                        Breve contato com Next.js e serviços em cloud como AWS, Azure e Vercel.
-                    </li>
-                    <li>
-                        <strong>Ferramentas:</strong> Microsoft Office, Notion, Figma, Git, Jira, Slack, Bitbucket.
-                    </li>
-                </ul>
-            </div>
-        </section>
+  <section class="aboutme-skills">
+    <div class="about-me">
+      <h3>
+        SOBRE MIM
+      </h3>
+      <p>
+        Sou estudante de Sistemas de Informação na Pontifícia Universidade Católica de Minas Gerais e
+        apaixonado por criar coisas úteis para todos, aprender coisas novas e compartilhar conhecimentos.
+        Profundamente interessado em algoritmos, cibersegurança, design, ciência e humanos. Adoro resolver
+        problemas e estou sempre procurando por desafios para aprender algo novo.
+        Todos os dias tentando ser uma pessoa e profissional melhor que o dia anterior. <br> <br>
+        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+        Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.
+      </p>
+    </div>
+    <div class="skills">
+      <h3>
+        HABILIDADES
+      </h3>
+      <ul>
+        <li>
+          <strong>Front-end:</strong> Conhecimentos amplos em JavaScript e React. Conhecimentos
+          intermediários em TypeScript e React Native (desenvolvimento mobile) e bom conhecimento em
+          diversos frameworks CSS como styled-components e Tailwind.
+          Orientado sempre por boas práticas de UI e UX.
+        </li>
+        <li>
+          <strong>Back-end:</strong> Conhecimentos amplos em Node.js e frameworks como Express, NestJS,
+          Fastify, e banco de dados SQL (MySQL e Postgres). Bom conhecimento em
+          conteinerização com Docker (também com Linux em WSL2), Kubernetes e ORMs como Prisma.
+        </li>
+        <li>
+          <strong>Serverless:</strong>
+          Breve contato com Next.js e serviços em cloud como AWS e Vercel.
+        </li>
+        <li>
+          <strong>Ferramentas:</strong> Microsoft Office, Notion, Figma, Git, Jira, Slack.
+        </li>
+      </ul>
+    </div>
+  </section>
+  <section class="goals-education">
+    <div class="goals">
+      <h3>
+        OBJETIVOS
+      </h3>
+      <ul>
+        <li>
+          Trabalhar em uma empresa de programação com foco em desenvolvimento web com HTML, CSS,
+          JavaScript e AJAX, desenvolver e codificar páginas e interfaces web que possam ajudar e ter
+          utilidade e relevância social e concluir minha formação acadêmica em Sistemas de Informação,
+          futuramente me especializar em pós-graduações de mestrado e doutorado.
+        </li>
+      </ul>
+    </div>
+    <div class="education">
+      <h3>
+        FORMAÇÃO & CURSOS
+      </h3>
+      <ul>
+        <li>
+          <strong>Graduando em Sistemas de Informação - PUC Minas (2022 - 2026)</strong>
+        </li>
+        <li>
+          MIT 6.006 OpenCourseWare - Massaschussets Institute of Technology (2023)
+        </li>
+        <li>
+          Banco Pan Java Developer Bootcamp - DIO (2023)
+        </li>
+        <li>
+          Introduction to HTML5 - University of Michigan (2022)
+        </li>
+        <li>
+          Metodologias Ageis e Scrum - IBMEC (2022)
+        </li>
+        <li>
+          C2 Proficient English Test - EF SET (2022)
+        </li>
+      </ul>
+    </div>
 
-        <section class="goals-education">
-            <div class="goals">
-                <h3>
-                    OBJETIVOS
-                </h3>
-                <ul>
-                    <li>
-                        Trabalhar em uma empresa de programação com foco em desenvolvimento web com HTML, CSS,
-                        JavaScript e AJAX, desenvolver e codificar páginas e interfaces web que possam ajudar e ter
-                        utilidade e relevância social e concluir minha formação acadêmica em Sistemas de Informação,
-                        futuramente me especializar em pós-graduações de mestrado e doutorado.
-                    </li>
-                </ul>
-            </div>
-            <div class="education">
-                <h3>
-                    FORMAÇÃO & CURSOS
-                </h3>
-                <ul>
-                    <li>
-                        <strong>Graduando em Sistemas de Informação - PUC Minas (2022 - 2026)</strong>
-                    </li>
-                    <li>
-                        MIT 6.006 OpenCourseWare - Massaschussets Institute of Technology (2023)
-                    </li>
-                    <li>
-                        Introduction to HTML5 - University of Michigan (2022)
-                    </li>
-                    <li>
-                        Banco Pan Java Developer Bootcamp - DIO (2023)
-                    </li>
-                    <li>
-                        Metodologias Ageis e Scrum - IBMEC (2022)
-                    </li>
-                    <li>
-                        C2 Proficient English Test - EF SET (2022)
-                    </li>
-                </ul>
-            </div>
-
-        </section>
-        <section class="languages-job">
-            <div class="job">
-                <h3>
-                    OPEN TO WORK:
-                </h3>
-                <p>
-                    Me encontro em uma busca incessante de conhecimentos que agreguem tanto em meu ser profissional,
-                    quanto pessoal. Atualmente estou buscando uma oportunidade de crescimento e engrandecimento nessa
-                    minha jornada.
-                    Procuro por uma vaga de <strong>estágio/trainee/Júnior</strong> em qualquer uma das tecnologias dominadas por mim.
-                </p>
-            </div>
-            <div class="languages">
-                <h3>
-                    IDIOMAS
-                </h3>
-                <ul>
-                    <li>
-                        <strong>INGLÊS</strong> — AVANÇADO
-                    </li>
-                    <li>
-                        <strong>ESPANHOL</strong> — INTERMEDIÁRIO
-                    </li>
-                    <li>
-                        <strong>ALEMÃO</strong> — BÁSICO
-                    </li>
-                    <li>
-                        <strong>PORTUGUÊS</strong> — NATIVO
-                    </li>
-                </ul>
-            </div>
-
-        </section>
-        <footer class="wave">
-            <img src="./assets/wave.svg" alt="Wave">
-        </footer>
-    </body>
+  </section>
+  <section class="languages-job">
+    <div class="job">
+      <h3>
+        OPEN TO WORK!
+      </h3>
+      <p>
+        Me encontro em uma busca incessante de conhecimentos que agreguem tanto em meu ser profissional,
+        quanto pessoal. Atualmente estou buscando uma oportunidade de crescimento e engrandecimento nessa
+        minha jornada.
+        Procuro por uma vaga de <strong>estágio/trainee/júnior</strong> em qualquer uma das tecnologias dominadas por
+        mim.
+      </p>
+    </div>
+    <div class="languages">
+      <h3>
+        IDIOMAS
+      </h3>
+      <ul>
+        <li>
+          <strong>INGLÊS</strong> — AVANÇADO
+        </li>
+        <li>
+          <strong>ESPANHOL</strong> — INTERMEDIÁRIO
+        </li>
+        <li>
+          <strong>ALEMÃO</strong> — BÁSICO
+        </li>
+        <li>
+          <strong>PORTUGUÊS</strong> — NATIVO
+        </li>
+      </ul>
+    </div>
+  </section>
+  <footer class="wave">
+    <img src="./assets/wave.svg" alt="Wave">
+  </footer>
+  </body>
 </html>
